[package]
name = "rocket-etag-if-none-match"
version = "0.4.3"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2021"
rust-version = "1.67"
repository = "https://github.com/magiclen/rocket-etag-if-none-match"
homepage = "https://magiclen.org/rocket-etag-if-none-match"
keywords = ["rocket", "server", "web", "etag", "http"]
categories = ["web-programming"]
description = "This crate provides a request guard used for getting `if-none-match` header."
license = "MIT"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[dependencies]
rocket = "0.5.0-rc.3"
entity-tag = "0.1"

[dev-dependencies]
chrono = "0.4.6"
